--- a/cn/index.html
+++ b/cn/index.html
@@ -329,7 +329,7 @@
                     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.bilibili.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title=""data-original-title="https://www.bilibili.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
-                                <img data-src="../assets/images/logos/dribbble.png" class="lozad img-circle" width="40">
+                                <img data-src="https://www.bilibili.com/favicon.ico" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
