--- a/cn/index.html
+++ b/cn/index.html
@@ -80,207 +80,79 @@
                     </div>
                 </header>
                 <ul id="main-menu" class="main-menu">
-                    <li>
-                        <a href="#常用推荐" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">常用推荐</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#社区资讯" class="smooth">
-                            <i class="linecons-doc"></i>
-                            <span class="title">社区资讯</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a>
-                            <i class="linecons-lightbulb"></i>
-                            <span class="title">灵感采集</span>
-                        </a>
-                        <ul>
-                            <li>
-                                <a href="#发现产品" class="smooth">
-                                    <span class="title">发现产品</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#界面灵感" class="smooth">
-                                    <span class="title">界面灵感</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#网页灵感" class="smooth">
-                                    <span class="title">网页灵感</span>
-                                    <span class="label label-pink pull-right hidden-collapsed">Hot</span>
-                                </a>
-                            </li>
-                            <!-- <li>
-                                <a href="#动效设计" class="smooth">
-                                    <span class="title">动效设计</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#电商平台" class="smooth">
-                                    <span class="title">电商平台</span>
-                                </a>
-                            </li> -->
-                        </ul>
-                    </li>
-                    <li>
-                        <a>
-                            <i class="linecons-thumbs-up"></i>
-                            <span class="title">素材资源</span>
-                        </a>
-                        <ul>
-                            <li>
-                                <a href="#图标素材" class="smooth">
-                                    <span class="title">图标素材</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#LOGO设计" class="smooth">
-                                    <span class="title">LOGO设计</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#平面素材" class="smooth">
-                                    <span class="title">平面素材</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#UI资源" class="smooth">
-                                    <span class="title">UI资源</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#Sketch资源" class="smooth">
-                                    <span class="title">Sketch资源</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#字体资源" class="smooth">
-                                    <span class="title">字体资源</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#Mockup" class="smooth">
-                                    <span class="title">Mockup</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#摄影图库" class="smooth">
-                                    <span class="title">摄影图库</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#PPT资源" class="smooth">
-                                    <span class="title">PPT资源</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a>
-                            <i class="linecons-diamond"></i>
-                            <span class="title">常用工具</span>
-                        </a>
-                        <ul>
-                            <li>
-                                <a href="#图形创意" class="smooth">
-                                    <span class="title">图形创意</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#界面设计" class="smooth">
-                                    <span class="title">界面设计</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#交互动效" class="smooth">
-                                    <span class="title">交互动效</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#在线配色" class="smooth">
-                                    <span class="title">在线配色</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#在线工具" class="smooth">
-                                    <span class="title">在线工具</span>
-                                </a>
-                            </li>
-                            <!-- <li>
-                                <a href="#Sketch插件" class="smooth">
-                                    <span class="title">Sketch插件</span>
-                                </a>
-                            </li> -->
-                            <li>
-                                <a href="#Chrome插件" class="smooth">
-                                    <span class="title">Chrome插件</span>
-                                </a>
-                            </li>
-                            <!-- <li>
-                                <a href="#H5制作" class="smooth">
-                                    <span class="title">H5制作</span>
-                                </a>
-                            </li> -->
-                        </ul>
-                    </li>
-                    <li>
-                        <a>
-                            <i class="linecons-pencil"></i>
-                            <span class="title">学习教程</span>
-                        </a>
-                        <ul>
-                            <li>
-                                <a href="#设计规范" class="smooth">
-                                    <span class="title">设计规范</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#视频教程" class="smooth">
-                                    <span class="title">视频教程</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#设计文章" class="smooth">
-                                    <span class="title">设计文章</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#设计电台" class="smooth">
-                                    <span class="title">设计电台</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#交互设计" class="smooth">
-                                    <span class="title">交互设计</span>
-                                    <span class="label label-pink pull-right hidden-collapsed">Hot</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#UED团队" class="smooth">
-                            <i class="linecons-user"></i>
-                            <span class="title">UED团队</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="about.html">
-                            <i class="linecons-heart"></i>
-                            <span class="tooltip-blue">关于本站</span>
-                            <span class="label label-Primary pull-right hidden-collapsed">♥︎</span>
-                        </a>
-                    </li>
-                    <!-- <div class="submit-tag">
-                        <a href="about.html">
-                            <i class="linecons-heart"></i>
-                            <span class="tooltip-blue">关于本站</span>
-                            <span class="label label-Primary pull-right hidden-collapsed">♥︎</span>
-                        </a>
-                    </div> -->
+            <!-- 01 AI 指挥部 -->
+            <li>
+                <a>
+                    <i class="linecons-star"></i>
+                    <span class="title">AI 指挥部</span>
+                </a>
+                <ul>
+                    <li><a href="#对话与写作" class="smooth"><span class="title">对话与写作</span></a></li>
+                    <li><a href="#视觉与语音" class="smooth"><span class="title">视觉与语音</span></a></li>
+                    <li><a href="#插件与调试" class="smooth"><span class="title">插件与调试</span></a></li>
+                </ul>
+            </li>
+
+            <!-- 02 流量与运营 -->
+            <li>
+                <a>
+                    <i class="linecons-cloud"></i>
+                    <span class="title">流量与运营</span>
+                </a>
+                <ul>
+                    <li><a href="#抖音电商与变现" class="smooth"><span class="title">抖音电商与变现</span></a></li>
+                    <li><a href="#SEO与站长工具" class="smooth"><span class="title">SEO与站长工具</span></a></li>
+                    <li><a href="#多账号管理" class="smooth"><span class="title">多账号管理</span></a></li>
+                </ul>
+            </li>
+
+            <!-- 03 文案与素材源 -->
+            <li>
+                <a>
+                    <i class="linecons-pencil"></i>
+                    <span class="title">文案与素材源</span>
+                </a>
+                <ul>
+                    <li><a href="#热点与资讯" class="smooth"><span class="title">热点与资讯</span></a></li>
+                    <li><a href="#创作辅助" class="smooth"><span class="title">创作辅助</span></a></li>
+                    <li><a href="#外部灵感与资源" class="smooth"><span class="title">外部灵感与资源</span></a></li>
+                </ul>
+            </li>
+
+            <!-- 04 商务与政务 -->
+            <li>
+                <a>
+                    <i class="linecons-wallet"></i>
+                    <span class="title">商务与政务</span>
+                </a>
+                <ul>
+                    <li><a href="#本地政务" class="smooth"><span class="title">本地政务</span></a></li>
+                    <li><a href="#获客与企业查询" class="smooth"><span class="title">获客与企业查询</span></a></li>
+                    <li><a href="#金融与信贷" class="smooth"><span class="title">金融与信贷</span></a></li>
+                </ul>
+            </li>
+
+            <!-- 05 通用工具箱 -->
+            <li>
+                <a>
+                    <i class="linecons-cog"></i>
+                    <span class="title">通用工具箱</span>
+                </a>
+                <ul>
+                    <li><a href="#下载神器" class="smooth"><span class="title">下载神器</span></a></li>
+                    <li><a href="#网络与账号" class="smooth"><span class="title">网络与账号</span></a></li>
+                    <li><a href="#生活便民" class="smooth"><span class="title">生活便民</span></a></li>
+                </ul>
+            </li>
+
+            <!-- 底部关于（保留项） -->
+            <li>
+                <a href="about.html">
+                    <i class="linecons-heart"></i>
+                    <span class="title">关于本站</span>
+                </a>
+            </li>
+
                 </ul>
             </div>
         </div>
