--- a/cn/index.html
+++ b/cn/index.html
@@ -223,10 +223,10 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://tongyi.aliyun.com/', '_blank')" data-toggle="tooltip" title="通义千问">
+               <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.qianwen.com/?source=tongyigw', '_blank')" data-toggle="tooltip" title="通义千问">
                 <div class="xe-comment-entry">
-                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=tongyi.aliyun.com&sz=64" class="img-circle" width="40"></a>
+                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=www.qianwen.com&sz=64" class="img-circle" width="40"></a>
                     <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>通义千问</strong></a><p class="overflowClip_2">阿里大模型</p></div>
                 </div>
             </div>
