--- a/cn/index.html
+++ b/cn/index.html
@@ -302,7 +302,7 @@
     </div>
     <br />
 
-    <!-- 视觉与语音 -->
+       <!-- 视觉与语音 -->
     <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="视觉与语音"></i>视觉与语音</h4>
     <div class="row">
         <div class="col-sm-3">
@@ -329,6 +329,12 @@
                 </div>
             </div>
         </div>
+    </div>
+    <br />
+
+    <!-- 插件与调试 -->
+    <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="插件与调试"></i>插件与调试</h4>
+    <div class="row">
         <div class="col-sm-3">
             <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.coze.cn/', '_blank')" data-toggle="tooltip" title="Coze扣子">
                 <div class="xe-comment-entry">
