--- a/cn/index.html
+++ b/cn/index.html
@@ -256,6 +256,15 @@
                     <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>蚁小二</strong></a><p class="overflowClip_2">多账号分发</p></div>
                 </div>
             </div>
+                    <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.doubao.com/', '_blank')" data-toggle="tooltip" title="豆包">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=www.doubao.com&sz=64" class="img-circle" width="40"></a>
+                    <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>豆包</strong></a><p class="overflowClip_2">字节跳动旗下 AI 助手</p></div>
+                </div>
+            </div>
+        </div>
+
         </div>
     </div>
     <br />
