--- a/cn/index.html
+++ b/cn/index.html
@@ -256,6 +256,8 @@
                     <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>蚁小二</strong></a><p class="overflowClip_2">多账号分发</p></div>
                 </div>
             </div>
+            </div>
+
                     <div class="col-sm-3">
             <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.doubao.com/', '_blank')" data-toggle="tooltip" title="豆包">
                 <div class="xe-comment-entry">
