--- a/cn/index.html
+++ b/cn/index.html
@@ -142,6 +142,12 @@
                     <li><a href="#下载神器" class="smooth"><span class="title">下载神器</span></a></li>
                     <li><a href="#网络与账号" class="smooth"><span class="title">网络与账号</span></a></li>
                     <li><a href="#生活便民" class="smooth"><span class="title">生活便民</span></a></li>
+                    								<li>
+									<a href="#Books" class="smooth">
+										<span class="title">书籍资源</span>
+									</a>
+								</li>
+
                 </ul>
             </li>
 
