--- a/cn/index.html
+++ b/cn/index.html
@@ -711,6 +711,176 @@
         </div>
     </div>
     <br />
+			    <!-- 书籍资源 -->
+    <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="Books"></i>书籍资源</h4>
+    <div class="row">
+        <!-- 1. Z-library -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://zh.z-library.sk', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Z-library">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=zh.z-library.sk&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>Z-library</strong>
+                        </a>
+                        <p class="overflowClip_2">全球最大的数字图书馆</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 2. 安娜的档案 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://zh.annas-archive.org/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="安娜的档案">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=zh.annas-archive.org&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>安娜的档案</strong>
+                        </a>
+                        <p class="overflowClip_2">影子图书馆搜索引擎</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 3. 24h搜书 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://24hbook.daohangxie.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="24h搜书">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=24hbook.daohangxie.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>24h搜书</strong>
+                        </a>
+                        <p class="overflowClip_2">综合电子书搜索</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 4. SaltyLeo的书架 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://tstrs.me/search', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="SaltyLeo的书架">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=tstrs.me&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>SaltyLeo的书架</strong>
+                        </a>
+                        <p class="overflowClip_2">优质电子书资源</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <!-- 5. 小力盘 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.xiaolipan.com/index.html', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="小力盘">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.xiaolipan.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>小力盘</strong>
+                        </a>
+                        <p class="overflowClip_2">网盘资源搜索</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 6. 苦瓜书盘 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://kgbook.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="苦瓜书盘">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=kgbook.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>苦瓜书盘</strong>
+                        </a>
+                        <p class="overflowClip_2">电子书分享平台</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 7. 书格 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.shuge.org/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="书格">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.shuge.org&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>书格</strong>
+                        </a>
+                        <p class="overflowClip_2">有品位的数字古籍图书馆</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 8. 熊猫速读 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://qread.xmsoushu.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="熊猫速读">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=qread.xmsoushu.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>熊猫速读</strong>
+                        </a>
+                        <p class="overflowClip_2">快速阅读与搜索</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <!-- 9. 书葵网 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.shukui.net/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="书葵网">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.shukui.net&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>书葵网</strong>
+                        </a>
+                        <p class="overflowClip_2">电子书资源聚合</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 10. 鸠摩搜书 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.jiumodiary.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="鸠摩搜书">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.jiumodiary.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>鸠摩搜书</strong>
+                        </a>
+                        <p class="overflowClip_2">专业的电子书搜索引擎</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br />
+
 
             <!-- Main Footer -->
             <!-- Choose between footer styles: "footer-type-1" or "footer-type-2" -->
