--- a/cn/index.html
+++ b/cn/index.html
@@ -229,6 +229,22 @@
                 </div>
             </div>
         </div>
+		        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://notebooklm.google.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="NotebookLM">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=notebooklm.google.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>NotebookLM</strong>
+                        </a>
+                        <p class="overflowClip_2">Google AI 智能笔记助手</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
                <div class="col-sm-3">
             <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.qianwen.com/?source=tongyigw', '_blank')" data-toggle="tooltip" title="通义千问">
                 <div class="xe-comment-entry">
