--- a/cn/index.html
+++ b/cn/index.html
@@ -229,47 +229,74 @@
                 </div>
             </div>
       
-		        <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://notebooklm.google.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="NotebookLM">
-                <div class="xe-comment-entry">
-                    <a class="xe-user-img">
-                        <img src="https://www.google.com/s2/favicons?domain=notebooklm.google.com&sz=64" class="img-circle" width="40">
-                    </a>
-                    <div class="xe-comment">
-                        <a href="#" class="xe-user-name overflowClip_1">
-                            <strong>NotebookLM</strong>
-                        </a>
-                        <p class="overflowClip_2">Google AI 智能笔记助手</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-               <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.qianwen.com/?source=tongyigw', '_blank')" data-toggle="tooltip" title="通义千问">
-                <div class="xe-comment-entry">
-                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=www.qianwen.com&sz=64" class="img-circle" width="40"></a>
-                    <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>通义千问</strong></a><p class="overflowClip_2">阿里大模型</p></div>
-                </div>
+		   <!-- NotebookLM -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://notebooklm.google.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="NotebookLM">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=notebooklm.google.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>NotebookLM</strong>
+                </a>
+                <p class="overflowClip_2">Google AI 智能笔记助手</p>
             </div>
         </div>
     </div>
-   
-        <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://yuanbao.tencent.com/', '_blank')" data-toggle="tooltip" title="腾讯元宝">
-                <div class="xe-comment-entry">
-                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=yuanbao.tencent.com&sz=64" class="img-circle" width="40"></a>
-                    <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>腾讯元宝</strong></a><p class="overflowClip_2">腾讯AI助手</p></div>
-                </div>
+</div>
+
+<!-- 通义千问 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://tongyi.aliyun.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="通义千问">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://img.alicdn.com/imgextra/i4/O1CN01d06T9e1QVbXq0d9kX_!!6000000001986-2-tps-128-128.png" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>通义千问</strong>
+                </a>
+                <p class="overflowClip_2">阿里大模型</p>
             </div>
         </div>
-        <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.baidu.com/', '_blank')" data-toggle="tooltip" title="百度">
-                <div class="xe-comment-entry">
-                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=baidu.com&sz=64" class="img-circle" width="40"></a>
-                    <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>百度</strong></a><p class="overflowClip_2">百度一下</p></div>
-                </div>
+    </div>
+</div>
+
+<!-- 腾讯元宝 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://yuanbao.tencent.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="腾讯元宝">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://yuanbao.tencent.com/favicon.ico" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>腾讯元宝</strong>
+                </a>
+                <p class="overflowClip_2">腾讯AI助手</p>
             </div>
+        </div>
+    </div>
+</div>
+
+<!-- 百度 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.baidu.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="百度">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.baidu.com/favicon.ico" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>百度</strong>
+                </a>
+                <p class="overflowClip_2">百度一下</p>
+            </div>
+        </div>
+    </div>
+</div>
+
         </div>
         <div class="col-sm-3">
             <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.yixiaoer.cn/web/login', '_blank')" data-toggle="tooltip" title="蚁小二">
