--- a/cn/index.html
+++ b/cn/index.html
@@ -381,6 +381,40 @@
                 </div>
             </div>
         </div>
+		<!-- Suno -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://suno.com/create', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Suno">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=suno.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>Suno</strong>
+                </a>
+                <p class="overflowClip_2">AI音乐创作平台</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- MINIMAX -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.minimax.io/audio/text-to-speech', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="MINIMAX">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=minimax.io&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>MINIMAX</strong>
+                </a>
+                <p class="overflowClip_2">语音合成与大模型</p>
+            </div>
+        </div>
+    </div>
+</div>
+
     </div>
     <br />
 
