--- a/cn/index.html
+++ b/cn/index.html
@@ -414,6 +414,40 @@
         </div>
     </div>
 </div>
+		<!-- TTSMaker -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://ttsmaker.cn/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="TTSMaker">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=ttsmaker.cn&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>TTSMaker</strong>
+                </a>
+                <p class="overflowClip_2">免费文本转语音工具</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Sider -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://sider.ai/zh-CN/chat', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Sider">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=sider.ai&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>Sider</strong>
+                </a>
+                <p class="overflowClip_2">沉浸式AI侧边栏助手</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 
     </div>
     <br />
