--- a/cn/index.html
+++ b/cn/index.html
@@ -506,6 +506,193 @@
                 </div>
             </div>
         </div>
+		<!-- DOU+网页版 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://doujia.douyin.com/home', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="DOU+网页版">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=doujia.douyin.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>DOU+网页版</strong>
+                </a>
+                <p class="overflowClip_2">抖音官方投放工具</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 考古加 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.kaogujia.com/home', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="考古加">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=www.kaogujia.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>考古加</strong>
+                </a>
+                <p class="overflowClip_2">专业直播数据分析</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 抖音创作者中心 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://creator.douyin.com/creator-micro/home', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="抖音创作者中心">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=creator.douyin.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>抖音创作者中心</strong>
+                </a>
+                <p class="overflowClip_2">官方创作服务平台</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 抖币充值 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.douyin.com/pay', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="抖币充值">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=www.douyin.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>抖币充值</strong>
+                </a>
+                <p class="overflowClip_2">抖音官方充值中心</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 抖音企业号 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://leads.cluerich.com/pc/growth/home', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="抖音企业号">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=leads.cluerich.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>抖音企业号</strong>
+                </a>
+                <p class="overflowClip_2">企业营销经营平台</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 抖音 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.douyin.com/jingxuan', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="抖音">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=www.douyin.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>抖音</strong>
+                </a>
+                <p class="overflowClip_2">记录美好生活</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 巨量算数 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://trendinsight.oceanengine.com/arithmetic-index', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="巨量算数">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=trendinsight.oceanengine.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>巨量算数</strong>
+                </a>
+                <p class="overflowClip_2">抖音内容趋势洞察</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 抖音热点宝 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://douhot.douyin.com/analysis?active_tab=analysis_core', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="抖音热点宝">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=douhot.douyin.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>抖音热点宝</strong>
+                </a>
+                <p class="overflowClip_2">实时追踪全网热点</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 巨量创意 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://cc.oceanengine.com/inspiration/creative-hot/douyin', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="巨量创意">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=cc.oceanengine.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>巨量创意</strong>
+                </a>
+                <p class="overflowClip_2">广告创意灵感平台</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 巨量百应 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.douyinec.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="巨量百应">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=www.douyinec.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>巨量百应</strong>
+                </a>
+                <p class="overflowClip_2">达人带货电商平台</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 飞瓜热门视频榜 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://dy.feigua.cn/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="飞瓜热门视频榜">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=dy.feigua.cn&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>飞瓜热门视频榜</strong>
+                </a>
+                <p class="overflowClip_2">短视频数据分析</p>
+            </div>
+        </div>
+    </div>
+</div>
+
     </div>
     <br />
 
