--- a/cn/index.html
+++ b/cn/index.html
@@ -715,6 +715,40 @@
                 </div>
             </div>
         </div>
+		<!-- 站长之家 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://tool.chinaz.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="站长之家">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=tool.chinaz.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>站长之家</strong>
+                </a>
+                <p class="overflowClip_2">站长工具查询平台</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 超级蜘蛛池 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.cjzzc.com/spider', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="超级蜘蛛池">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=www.cjzzc.com&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>超级蜘蛛池</strong>
+                </a>
+                <p class="overflowClip_2">SEO蜘蛛池工具</p>
+            </div>
+        </div>
+    </div>
+</div>
+
     </div>
     <br />
 
