--- a/cn/index.html
+++ b/cn/index.html
@@ -751,6 +751,65 @@
 
     </div>
     <br />
+<!-- 多账号管理 -->
+<h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="多账号管理"></i>多账号管理</h4>
+<div class="row">
+
+    <!-- 壹伴 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://yibanbianji.com/?source=yiban_index', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="壹伴">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=yibanbianji.com&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>壹伴</strong>
+                    </a>
+                    <p class="overflowClip_2">公众号效率工具</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 微信公众号 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://mp.weixin.qq.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="微信公众号">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=mp.weixin.qq.com&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>微信公众号</strong>
+                    </a>
+                    <p class="overflowClip_2">官方公众平台</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 百家号 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://baijiahao.baidu.com/builder/rc/edit?type=news&is_from_cms=1', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="百家号">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=baijiahao.baidu.com&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>百家号</strong>
+                    </a>
+                    <p class="overflowClip_2">百度内容创作平台</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+<br />
+			
+			
 
     <!-- ====================================================
          03 文案与素材源
