--- a/cn/index.html
+++ b/cn/index.html
@@ -842,6 +842,91 @@
                 </div>
             </div>
         </div>
+		    <!-- 今日热榜 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://tophub.today/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="今日热榜">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=tophub.today&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>今日热榜</strong>
+                    </a>
+                    <p class="overflowClip_2">聚合全网热点</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 考拉新媒体 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.kaolamedia.com/hot', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="考拉新媒体">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=www.kaolamedia.com&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>考拉新媒体</strong>
+                    </a>
+                    <p class="overflowClip_2">新媒体热点聚合</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 网易财经 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://money.163.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="网易财经">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=money.163.com&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>网易财经</strong>
+                    </a>
+                    <p class="overflowClip_2">财经资讯门户</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 财联社 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.cls.cn/depth?id=1000', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="财联社">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=www.cls.cn&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>财联社</strong>
+                    </a>
+                    <p class="overflowClip_2">快速准确的财经资讯</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 5118文章搜索采集 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://so.5118.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="5118文章搜索">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=so.5118.com&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>5118文章搜索</strong>
+                    </a>
+                    <p class="overflowClip_2">流量词文章挖掘</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     </div>
     <br />
 
